# holon

./: .gitignore  pyproject.toml
packaging/: INSTALL.md  InstallSupport.psm1  build-wallet.ps1  install.ps1  uninstall.ps1
src/: holon_wallet_app.py
src/holon_contracts/: __init__.py  builders.py  codes.py  model.py  payloads.py  schemas.py  validation.py  violations.py
src/holon_guard/: __init__.py  __main__.py  action_model.py  action_store.py  actions.py  authority.py  authority_audit.py  authority_intent.py  authority_prepare.py  authority_responses.py  core.py  flow_controls.py  lifecycle.py  lock.py  model.py  (+11 more)
tests/: guard_support.py  package_support.py  powershell_support.py  test_action_ledger.py  test_authority.py  test_contracts.py  test_cross_runtime_contracts.py  test_guard.py  test_guard_codec.py  test_guard_contract_boundary.py  test_guard_failures.py  test_guard_ids.py  test_guard_install_gate.py  test_guard_lifecycle.py  test_guard_process.py  test_guard_server.py  test_guard_store.py  test_guard_wallet.py  test_install_integrity.py  test_install_script.py  test_installed_launcher.py  test_journal_model.py  test_journal_renderer.py  test_journal_store.py  test_m204_integration.py  test_package_builder.py  test_packaged_plugin.py  test_plugin.py  test_policy.py  test_python311_compatibility.py  test_real_hermes_package.py  test_release_manifest.py  test_request_control.py  test_runtime_security.py  test_transfer_handoff.py  test_uninstall_script.py  test_wallet_approval.py  test_wallet_authority.py  test_wallet_broadcast.py  test_wallet_control.py  (+15 more)
(+117 files in other folders)
