[project]
name = "holon"
version = "0.1.0a0"
description = "Crypto-native security boundary for Hermes"
requires-python = ">=3.13,<3.14"
dependencies = ["pyside6-essentials==6.11.1"]

[dependency-groups]
dev = ["pyinstaller==6.21.0", "pytest>=8,<10"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
